Footer styling fix on small screen

--- a/code/styles/base/_typography.scss
+++ b/code/styles/base/_typography.scss
@@ -37,7 +37,7 @@ h2 {
     size: $base-h2-size;
     weight: 400;
   }
-  margin-bottom: 0.25em;
+  margin-bottom: 0.15em;
 }
 
 h3 {
